Sudan countries and pops

--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -449,9 +449,9 @@ KBO_democracy;Bornu Republic;;;;;;;;;;;;;
 KBO_absolute_monarchy;Kanem-Bornu;;;;;;;;;;;;;
 KBO_prussian_constitutionalism;Kanem–Bornu;;;;;;;;;;;;;
 KBO_hms_government;Kanem–Bornu;;;;;;;;;;;;;
-WAD_absolute_monarchy;Wadai;;;;;;;;;;;;;
-WAD_prussian_constitutionalism;Wadai;;;;;;;;;;;;;
-WAD_hms_government;Wadai;;;;;;;;;;;;;
+WAD_absolute_monarchy;Burgu Kingdom;;;;;;;;;;;;;
+WAD_prussian_constitutionalism;Burgu Kingdom;;;;;;;;;;;;;
+WAD_hms_government;Burgu Kingdom;;;;;;;;;;;;;
 ADW;Adamawa;;;;;;;;;;;;;
 ADW_ADJ;Adamawan;;;;;;;;;;;;;
 ADW_absolute_monarchy;Adamawa;;;;;;;;;;;;;
@@ -2978,8 +2978,8 @@ TSW_radical;Bechuanaland Alliance Movement;;;;;;;;;;;;;
 TSW_socialist;Bechuanaland Democratic Party;;;;;;;;;;;;;
 TSW_communist;International Socialist Organization;;;;;;;;;;;;;
 TSW_fascist;Bechuanaland Fascist Front;;;;;;;;;;;;;
-WAD;Wadai;Ouaddaï;Wadai;;Ouaddai;;;;;;;;;
-WAD_ADJ;Wadai;Wadai;Wadai;;;;;;;;;;;
+WAD;Burgu;Burgu;Burgu;;Burgu;;;;;;;;;
+WAD_ADJ;Burgu;Burgu;Burgu;;;;;;;;;;;
 WAD_conservative;Kolak's Faction;Faction Kolak;Kolak Fraktion;;;;;;;;;;;
 WAD_liberal;Reform Faction;Faction de réforme;Verbesserung Fraktion;;;;;;;;;;;
 WAD_reactionary;Religious Faction;Faction Religieux;Religiöse Fraktion;;;;;;;;;;;
