--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -1247,3 +1247,4 @@ PROV3745;Gezzam;;;;;;;;;;;;;
 PROV3746;Tambura;;;;;;;;;;;;;
 PROV3747;Teggargrent;;;;;;;;;;;;;
 PROV3748;Tugurt;;;;;;;;;;;;;
+PROV3749;Meroë;;;;;;;;;;;;;
