--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -248,6 +248,15 @@ KIR;Kel Aïr;x;;;;
 KIR_ADJ;Kel Aïr;x;;;;
 KJJ;Kel Ajjer;x;;;;
 KIR_ADJ;Kel Ajjer;x;;;;
+DTW;Dotawo;x;;;;
+DTW_ADJ;Dotawo;x;;;;
+DTW_theocracy;Dotawo Order;;;;;;;;;;;;;
+DTW_democracy;Republic of Dotawo;;;;;;;;;;;;;
+DTW_absolute_monarchy;Makurian Kingdom;;;;;;;;;;;;;
+DTW_hms_government;Makurian Kingdom;;;;;;;;;;;;;
+DTW_prussian_constitutionalism;Makurian Kingdom;;;;;;;;;;;;;
+TBT;Tibesti;x;;;;
+TBT_ADJ;Tibesti;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
@@ -348,6 +357,7 @@ zuni_group;Zuni;x;;;;
 tanoan;Tanoan;x;;;;
 south_semitic;South Semitic;x;;;;
 na_dene;Na-Dene;x;;;;
+eastern_sudanic;Eastern Sudanic;x;;;;
 tawjilit;Tawjilit;x;;;;
 tasuknit;Tasuknit;x;;;;
 nafusi;Nafusi;x;;;;
@@ -558,7 +568,7 @@ tyari;Tyari;x;;;;
 mandayi;Mandayi;x;;;;
 khaliji;Khaliji;x;;;;
 hijazi;Hijazi;x;;;;
-bahrani;Bahrani
+bahrani;Bahrani;x;;;;
 najdi;Najdi;x;;;;
 judeo_hijazi;Judeo-Arabic;x;;;;
 nabataean;Nabataean;x;;;;
