--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -1173,7 +1173,7 @@ nuer;Nuer;Nuer;Nuerisch;;Nuer;;;;;;;;
 nuba;Nuba;Nuba;Nubaisch;;Nuba;;;;;;;;
 oromo;Oromo;Oromo;Oromotisch;;Oromo;;;;;;;;
 somali;Somali;Somali;Somalisch;;Somal?;;;;;;;;
-sudanese;Sudanese;Soudanais;Sudanesisch;;Sudanesa;;;;;;;;
+sudanese;Nubian;Nubien;Nubianisch;;Nubiano;;;;;;;;
 sukuma;Sukuma;Sukuma;Sukumisch;;Sukuma;;;;;;;;
 swahili;Swahili;Swahili;Swahilisch;;Suajili;;;;;;;;
 unyamwezi;Unyamwezi;Unyamwezi;Unyamwezisch;;Unyamwezi;;;;;;;;
