--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -358,6 +358,7 @@ tanoan;Tanoan;x;;;;
 south_semitic;South Semitic;x;;;;
 na_dene;Na-Dene;x;;;;
 eastern_sudanic;Eastern Sudanic;x;;;;
+egyptian;Egyptian;x;;;;
 tawjilit;Tawjilit;x;;;;
 tasuknit;Tasuknit;x;;;;
 nafusi;Nafusi;x;;;;
@@ -622,6 +623,7 @@ shashi_aryao;Shashi-Aryao;x;;;;
 chorasmian;Chorasmian;x;;;;
 latogatorok;Látogatórok;x;;;;
 batorok;Bátorok;x;;;;
+kushite;Kushite;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
