North Africa finished

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -257,6 +257,29 @@ DTW_hms_government;Makurian Kingdom;;;;;;;;;;;;;
 DTW_prussian_constitutionalism;Makurian Kingdom;;;;;;;;;;;;;
 TBT;Tibesti;x;;;;
 TBT_ADJ;Tibesti;x;;;;
+HKB;Kebbi;x;;;;
+HKB_ADJ;Kebbi;x;;;;
+HKN;Kano;x;;;;
+HKN_ADJ;Kano;x;;;;
+HKN_theocracy;Bishopric of Kano;;;;;;;;;;;;;
+HKN_democracy;Kano Republic;;;;;;;;;;;;;
+HKN_absolute_monarchy;Kano Kingdom;;;;;;;;;;;;;
+HKN_hms_government;Kano Kingdom;;;;;;;;;;;;;
+HKN_prussian_constitutionalism;Kano Kingdom;;;;;;;;;;;;;
+HKT;Katsina;x;;;;
+HKT_ADJ;Katsina;x;;;;
+IGL;Igala;x;;;;
+IGL_ADJ;Igala;x;;;;
+HBC;Bauchi;x;;;;
+HBC_ADJ;Bauchi;x;;;;
+WKR;Wukari;x;;;;
+WKR_ADJ;Wukari;x;;;;
+GIR;Gobir;x;;;;
+GIR_ADJ;Gobir;x;;;;
+GWR;Gwari;x;;;;
+GWR_ADJ;Gwari;x;;;;
+KWF;Kwararafa;x;;;;
+KWF_ADJ;Kwararafa;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
