--- a/KOS/localisation/000_persia_map.csv
+++ b/KOS/localisation/000_persia_map.csv
@@ -162,8 +162,8 @@ PROV2811;Biak Bay;;;;;;;;;;;;;
 PROV2813;Celebes Sea;;;;;;;;;;;;;
 PROV2814;Karimata Strait;;;;;;;;;;;;;
 PROV2852;Molucca Sea;;;;;;;;;;;;;
-PROV2853;Palau;;;;;;;;;;;;;
-PROV2856;Java Sea;;;;;;;;;;;;;
+PROV2853;Halmahera Sea;;;;;;;;;;;;;
+PROV2856;Palau Sea;;;;;;;;;;;;;
 PROV2857;Coast of New Guinea;;;;;;;;;;;;;
 PROV2862;Java Trench;;;;;;;;;;;;;
 PROV3077;Arafure Sea;;;;;;;;;;;;;
