--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -492,7 +492,7 @@ PROV2082;Epako;;;;;;;;;;;;;
 PROV2080;Otjivanda;;;;;;;;;;;;;
 PROV1788;Kahone;;;;;;;;;;;;;
 PROV1540;Nantong;;;;;;;;;;;;;
-PROV2526;Palmyra and Line Islands;;;;;;;;;;;;;
+PROV2526;Aono Raina;;;;;;;;;;;;;
 TIB_1591;Tibetan Plateau;;;;;;;;;;;;;
 PEU_2289;Oriente;;;;;;;;;;;;;
 PROV2382;Laboulaye;;;;;;;;;;;;;
