--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -10592,25 +10592,25 @@ PROV2500;Kalgoorlie;Kalgoorlie;Kalgoorlie;;Kalgoorlie;;;;;;;;
 PROV2502;Dampier;Dampier;Dampier;;Dampier;;;;;;;;
 PROV2503;Wiluna;Wiluna;Wiluna;;Wiluna;;;;;;;;
 PROV2508;Norfolk Island;Île Norfolk;Norfolk Island;;Isla de Norfolk ;;;;;;;;
-PROV2509;Auckland;Auckland;Auckland;;Auckland;;;;;;;;
+PROV2509;Tamaki Makarau;;;;;;;;;;;;
 PROV2514;Hokitika;Hokitika;Hokitika;;Hokitika;;;;;;;;
 PROV2517;Guam;Guam;Guam;;Guam;;;;;;;;
 PROV2518;Palau;Palau;Palau;;Palau;;;;;;;;
 PROV2520;Taveuni;Taveuni;Taveuni;;Taveuni;;;;;;;;
 PROV2521;Saipan;Saipan;Saipan;;Saipan;;;;;;;;
-PROV2522;Marshall Islands;Îles Marshall;Marshallinseln;;Islas Marshall;;;;;;;;
+PROV2522;Majro;;;;;;;;;;;;
 PROV2523;Nauru;Nauru;Nauru;;Nauru;;;;;;;;
-PROV2524;Wake;Wake;Wake;;Atolón de Wake;;;;;;;;
-PROV2525;Marcus;Marcus;Marcus;;Marcus;;;;;;;;
-PROV2527;Gilbert Islands;Îles Gilbert;Gilbertinseln;;Islas Gilbert;;;;;;;;
+PROV2524;Anen Kio;;;;;;;;;;;;
+PROV2525;Mizutani;;;;;;;;;;;;
+PROV2527;Tarawa;;;;;;;;;;;;
 PROV2532;Forte São Joaquim;Forte de São Joaquim;Forte Sao Joaquim;;Forte Sao Joaquim;;;;;;;;
-PROV2534;Solomon Islands;Îles Salomon;Solomonen;;Islas Solomon;;;;;;;;
+PROV2534;Istabu;;;;;;;;;;;;
 PROV2535;New Hebrides;New Hebrides;Neue Hebriden;;Nuevas Hébridas;;;;;;;;
 PROV2536;Santa Cruz Islands;Îles Santa Cruz ;Santa Cruz-Inseln;;Islas de Santa Cruz;;;;;;;;
-PROV2539;Bougainville;Bougainville;Bougainville;;Bougainville;;;;;;;;
+PROV2539;Buka;;;;;;;;;;;;
 PROV2540;Tonga;Tonga;Tonga;;Tonga;;;;;;;;
-PROV2541;Ellice Islands;Îles Ellice;Ellice-Inseln;;Islas Ellice;;;;;;;;
-PROV2542;Wallis and Futuna;Wallis-et-Futuna;Wallis und Futuna;;Wallis y Futuna;;;;;;;;
+PROV2541;Funfuti;;;;;;;;;;;;
+PROV2542;Uvea mo Futuna;;;;;;;;;;;;
 PROV2543;Apia;Apia;Apia;;Apia;;;;;;;;
 PROV2544;Pago Pago;Pago Pago;Pago Pago;;Pago Pago;;;;;;;;
 PROV2545;Rarotonga;Rarotonga;Rarotonga;;Rarotonga;;;;;;;;
@@ -10618,7 +10618,7 @@ PROV2546;Tongareva;Tongareva;Tongareva;;Tongareva;;;;;;;;
 PROV2547;Tokelau;Tokelau;Tokelau;;Tokelau;;;;;;;;
 PROV2549;Tarauac?Tarauaca;Tarauaca;;Tarauaca;;;;;;;;;
 PROV2550;Forte do Príncipe;Forte do Principe;Forte do Principe;;Forte do Príncipe;;;;;;;;
-PROV2551;Marquesas;Marquises;Marquesas;;Marquesas;;;;;;;;
+PROV2551;Te Henua 'Enana;;;;;;;;;;;;
 PROV2552;Pitcairn;Pitcairn;Pitcairn;;Pitcairn;;;;;;;;
 PROV2553;Tuamotus;Tuamotus;Tuamotus;;Tuamotus;;;;;;;;
 PROV2555;Augusta;Augusta;Augusta;;Augusta;;;;;;;;
@@ -10640,7 +10640,7 @@ PROV2574;Mochudi;Mochudi;Mochudi;;Mochudi;;;;;;;;
 PROV2575;Ipoh;Ipoh;Ipoh;;Ipoh;;;;;;;;
 PROV2576;Natuna;Natuna;Natuna;;Natuna;;;;;;;;
 PROV2578;Tacna;Tacna;Tacna;;Tacna;;;;;;;;
-PROV2579;Truk;Truk;Truk;;Truk;;;;;;;;
+PROV2579;Chuuk;;;;;;;;;;;;
 PROV2583;Cetinje;Cetinje;Cetinje;;Cetinje;;;;;;;;
 PROV2587;Kola;Kola;Kola;;Kola;;;;;;;;
 PROV2588;Onega;Onega;Onega;;Onega;;;;;;;;
@@ -10660,7 +10660,7 @@ PROV2616;Tilichiki;Tilichiki;Tilichiki;;Tilichiki;;;;;;;;
 PROV2617;Saghalian Oula;Saghalian Oula;Saghalian Oula;;Saghalian Oula;;;;;;;;
 PROV2618;Talaya;Talaya;Talaya;;Talaya;;;;;;;;
 PROV2621;Srednekolymsk;Srednekolymsk;Srednekolymsk;;Srednekolymsk;;;;;;;;
-PROV2623;Midway Island;Île Midway;Midway;;Isla de Midway;;;;;;;;
+PROV2623;Kauihelani;;;;;;;;;;;;
 PROV2624;Loango;Loango;Loango;;Loango;;;;;;;;
 PROV2633;Ossora;Ossora;Ossora;;Ossora;;;;;;;;
 PROV2635;Kariba;Kariba;Kariba;;Kariba;;;;;;;;
@@ -10842,8 +10842,8 @@ PROV2880;Southern Tasman Sea;Sud de la mer Tasman;Südliche Tasmanische See;;Sur 
 PROV2881;Canterbury Bight;Canterbury Bight;Canterbury-Bucht;;Canterbury Bight;;;;;;;;
 PROV2882;New Caledonian Sea;Mer de Nouvelle-Calédonie;Neukaledonische See;;Mar de Nueva Caledonia;;;;;;;;
 PROV2883;Coral Sea;Mer de Corail;Korallensee;;Mar del Coral;;;;;;;;
-PROV2884;Gilbert Sea;Mer de Gilbert;Gilbertsee;;Mar de Gilbert;;;;;;;;
-PROV2885;Solomon Sea;Mer des Salomon;Solomon-See;;Mar de las Salomón;;;;;;;;
+PROV2884;Funfuti Sea;;;;;;;;;;;;
+PROV2885;Istabu Sea;;;;;;;;;;;;
 PROV2886;Nauru Island;Île de Nauru;Nauru;;Isla de Nauru ;;;;;;;;
 PROV2887;Melanesia Sea;Mer de Mélanésie;Melanesische See;;Mar de Melanesia ;;;;;;;;
 PROV2888;Micronesia Sea;Mer de Micronésie;Mikronesische See;;Mar de Micronesia ;;;;;;;;
@@ -11102,7 +11102,7 @@ PROV3149;Murray Fracture Zone;Zone de fracture de Murray;Murray-Frakturzone;;Zon
 PROV3150;Coast of Hawaii;Côte d'Hawa?Küste von Hawaii;;Costa de Hawai;;;;;;;;;
 PROV3151;Argo Seamount;Mont sous-marin d'Argo;Argo Seamount;;Plataforma de Argo ;;;;;;;;
 PROV3152;Musicians Seamount;Mont sous-marin des musiciens;Musicians Seamount;;Plataforma de los Músicos;;;;;;;;
-PROV3153;Coast of Midway Island;Côte de Midway;Küste von Midway;;Isla de la Costa de Midway;;;;;;;;
+PROV3153;Coast of Kauihelani;;;;;;;;;;;;
 PROV3154;Kepler Plain;Plaine de Kepler;Kepler-Ebene;;Litoral de Kepler;;;;;;;;
 PROV3155;Galois Plain;Plaine Galois;Galois-Ebene;;Litoral de Galois;;;;;;;;
 PROV3156;O'Gorman Rise;Plateau d'O'Gorman;O'Gorman Rise;;Falla de O'Gorman;;;;;;;;
@@ -11118,18 +11118,18 @@ PROV3165;Discoverer Seamount;Mont sous-marin de Discoverer ;Discoverer Seamount;
 PROV3166;Tasavulu Flats;Vasière de Tasavulu;Tasavulu Flats;;Plataforma de Tasavulu;;;;;;;;
 PROV3167;Hawaiian Arch;Arc hawaïen;Hawaii-Bogen;;Arco Hawaiano;;;;;;;;
 PROV3168;Radford Basin;Bassin de Radford ;Radford-Becken;;Cuenca de Radford;;;;;;;;
-PROV3169;Northern Line Islands;Îles Line septentrionales;Nördliche Line-Inseln;;Islas Northern Line;;;;;;;;
-PROV3170;Coast of the Society Islands;Côte des Îles de la Sociét?Küste der Gesellschaftsinseln;;Costa de las Islas de la Sociedad;;;;;;;;;
+PROV3169;Northern Teraina Islands;;;;;;;;;;;;
+PROV3170;Coast of T?taiete m?;;;;;;;;;;;;;
 PROV3171;Peru Basin;Bassin du Pérou;Perubecken;;Cuenca peruana;;;;;;;;
 PROV3172;Yupanqui Basin;Bassin de Yupanqui;Yupanqui-Becken;;Cuenca de Yupanqui;;;;;;;;
 PROV3173;Severance Plains;Plaines de Severance;Severance-Ebene;;Litoral de Severance;;;;;;;;
 PROV3174;Altamira Plains;Plaines d'Altamira;Altamira-Ebene;;Litoral de Altamira ;;;;;;;;
-PROV3175;Southern Line Islands;Îles Line méridionales;Südliche Line-Inseln;;Islas Southern Line;;;;;;;;
+PROV3175;Southern Teraina Islands;;;;;;;;;;;;
 PROV3176;Central Pacific Basin;Bassin pacifique central;Zentralpazifikbecken;;Cuenca central del Pacífico;;;;;;;;
 PROV3177;Coast of Samoa;Côte des Samoa;Küste von Samoa;;Costa de Samoa;;;;;;;;
 PROV3178;Johnston Atoll;Atoll de Johnston;Johnston Atoll;;Atolón de Johnston ;;;;;;;;
 PROV3179;Coast of Tonga;Côte de Tonga;Küste von Tonga;;Costa de Tonga;;;;;;;;
-PROV3180;Coast of the Marquesas;Côte des Marquises;Küste der Marquesas;;Costa de las Marquesas;;;;;;;;
+PROV3180;Coast of the Te Henua 'Enana;;;;;;;;;;;;
 PROV3181;Resolution Flats;Vasière de Resolution;Resolution Flats;;Plataforma de Resolution;;;;;;;;
 PROV3182;Coast of the Tuamotus;Côte des Tuamotus;Küste der Tuamotus;;Costa de las Tuamotus;;;;;;;;
 PROV3183;Titus Ridge;Dorsale de Titus;Titus-Rücken;;Dorsal de Titus;;;;;;;;
@@ -11140,7 +11140,7 @@ PROV3187;Coast of Pitcairn Island;Côte de l'Île de Pitcairn;Küste der Pitcairn-I
 PROV3188;Rogeveen Basin;Bassin de Rogeveen;Rogeveen-Becken;;Cuenca de Rogeveen;;;;;;;;
 PROV3189;Menard Fracture Zone;Zone de fracture de Ménard;Menard-Frakturzone;;Zona de Fractura de Menard ;;;;;;;;
 PROV3190;Coast of Easter Island;Côte de l'Île de Pâques;Küste der Osterinsel;;Costa de la Isla de Pascua;;;;;;;;
-PROV3191;Coast of the Ellice Islands;Côte des Îles Ellice;Küste der Ellice-Inseln;;Costa de las Islas de Ellice;;;;;;;;
+PROV3191;Coast of the Funfuti;;;;;;;;;;;;
 PROV3192;New Caledonia Basin;Bassin de Nouvelle-Calédonie;New Caledonia-Becken;;Cuenca de Nueva Caledonia ;;;;;;;;
 PROV3193;Juan Fernandez Islands;Îles Juan Fernández;Juan Fernandez-Inseln;;Islas de Juan Fernández ;;;;;;;;
 PROV3194;Selkirk Rise;Plateau de Selkirk ;Selkirk Rise;;Falla de Selkirk ;;;;;;;;
@@ -11170,7 +11170,7 @@ PROV3217;Solace Flats;Vasière de Solace;Solace Flats;;Plataforma de Solace;;;;;;
 PROV3218;Pisaros Pass;Passe de Pisaros;Pisaros-Pass;;Paso de Pisaros;;;;;;;;
 PROV3219;Coast of Fiji;Côte de Fiji;Küste von Fiji;;Costa de Fiji;;;;;;;;
 PROV3220;Coast of Norfolk Island;Côte de l'Île Norfolk;Küste der Norfolk-Insel;;Costa de la isla de Norfolk;;;;;;;;
-PROV3221;Coast of the Gilbert Islands;Côte des Îles Gilbert;Küste der Gilbert-Inseln;;Costa de las Islas Gilbert;;;;;;;;
+PROV3221;Coast of the Tarawa;;;;;;;;;;;;
 PROV3222;Mainu Reef;Récif de Mainu;Mainu-Riff;;Arrecife de Mainu;;;;;;;;
 PROV3223;Tusei Bank;Banc de Tusei ;Tusei Bank;;Banco de Tusei;;;;;;;;
 PROV3224;Lake Tana;Lac Tana;Tanasee;;Lago Tana;;;;;;;;
