loc estonia finland sami kven voro

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -26,7 +26,7 @@ PROV3441;Gazli;;;;;;;;;;;;;
 PROV3442;Darvaza;;;;;;;;;;;;;
 PROV858;Tlaxcallan;;;;;;;;;;;;;
 PROV3425;Altenburg;;;;;;;;;;;;;
-PROV3424;Salacgriva;;;;;;;;;;;;;
+PROV3424;Saletsa;;;;;;;;;;;;;
 PROV3423;Domesnes;;;;;;;;;;;;;
 PROV3422;Baia Mare;;;;;;;;;;;;;
 PROV3421;Presevo;;;;;;;;;;;;;
@@ -84,8 +84,8 @@ PROV3372;Shulinya;;;;;;;;;;;;;
 PROV3371;Panglikalya;;;;;;;;;;;;;
 PROV3370;Fenyovár;;;;;;;;;;;;;
 PROV3369;Firjuza;;;;;;;;;;;;;
-PROV3368;Ivangorod;;;;;;;;;;;;;
-PROV3367;Pechory;;;;;;;;;;;;;
+PROV3368;Jaanilidna;;;;;;;;;;;;;
+PROV3367;Petseri;;;;;;;;;;;;;
 PROV3366;Telsiai;;;;;;;;;;;;;
 PROV3365;Neustadt;;;;;;;;;;;;;
 PROV3364;Sanmenwai;;;;;;;;;;;;;
@@ -114,7 +114,7 @@ PROV3342;Kilkis;;;;;;;;;;;;;
 PROV3341;Augustow;;;;;;;;;;;;;
 PROV3340;Krepost Ross;;;;;;;;;;;;;
 PROV3339;Rovaniemi;;;;;;;;;;;;;
-PROV3338;Kiruna;;;;;;;;;;;;;
+PROV3338;Giron;;;;;;;;;;;;;
 PROV3337;Zarov;;;;;;;;;;;;;
 PROV3336;Lubin;;;;;;;;;;;;;
 PROV3335;Zlin;;;;;;;;;;;;;
@@ -166,8 +166,6 @@ DEN_251;Island & Grønland;;;;;;;;;;;;;
 TUR_887;Karno K'aghak';;;;;;;;;;;;;
 TAJ_1208;Tadzhikistan;;;;;;;;;;;;;
 PROV308;Ålesund;;;;;;;;;;;;;
-PROV306;Bodø;;;;;;;;;;;;;
-PROV305;Trondhjem;;;;;;;;;;;;;
 PROV12;Liwa;;;;;;;;;;;;;
 AFG_1212;Herat;;;;;;;;;;;;;
 PROV2519;Maymana;;;;;;;;;;;;;
@@ -454,6 +452,33 @@ mountain;Montane Grassland;;;;;;;;;;;;;
 montane_tundra;Alpine Tundra;;;;;;;;;;;;;
 montane_forest;Montane Forest;;;;;;;;;;;;;
 savanna;Savanna;;;;;;;;;;;;;
+PROV305;Tråante;;;;;;;;;;;;;
+PROV306;Bådåddjo;;;;;;;;;;;;;
+PROV307;Romsa;;;;;;;;;;;;
+PROV318;Orrestaare;;;;;;;;;;;;
+PROV319;Staare;;;;;;;;;;;;
+PROV320;Ubmeje;;;;;;;;;;;;
+PROV321;Luleju;;;;;;;;;;;;
+PROV340;Kotka;;;;;;;;;;;;
+PROV345;Turun;;;;;;;;;;;;
+PROV346;Mustasaari;;;;;;;;;;;;
+PROV348;Ahvenanmaa;;;;;;;;;;;;
+PROV349;Harju;;;;;;;;;;;;
+PROV351;Pärnu;;;;;;;;;;;;;
+PROV352;Tartu;;;;;;;;;;;;
+PROV353;Kuressaare;;;;;;;;;;;;;
+PROV354;Rigõ;;;;;;;;;;;;
+PROV355;Lemsalu;;;;;;;;;;;;;
+PROV356;Olysta;;;;;;;;;;;;;
+PROV982;Aanaar;;;;;;;;;;;;
+PROV983;Käddluhtt;;;;;;;;;;;;
+PROV984;Kemi;;;;;;;;;;;;;
+PROV988;Puudoži;;;;;;;;;;;;;
+PROV994;Nevanlinna;;;;;;;;;;;;
+PROV996;Laugaz;;;;;;;;;;;;
+PROV997;Vopskiliin;;;;;;;;;;;;
+PROV2587;Kuâlõk;;;;;;;;;;;;
+PROV2709;Gulf of Rigõ;;;;;;;;;;;;
 PROV1377;Da Nang;;;;;;;;;;;;;
 PROV1714;Santa Rosa;;;;;;;;;;;;;
 PROV2631;Unalakleet;;;;;;;;;;;;;
@@ -520,7 +545,7 @@ CHI_1082;Guanwai;;;;;;;;;;;;;
 PROV2591;Tranquebar;;;;;;;;;;;;;
 PROV2625;North West River;;;;;;;;;;;;;
 PROV2580;Novaya Ladoga;;;;;;;;;;;;;
-PROV995;Petrozavodsk;;;;;;;;;;;;;
+PROV995;Äänislinna;;;;;;;;;;;;;
 PROV965;Jarson;;;;;;;;;;;;;
 PROV1048;Yekaterinodar;;;;;;;;;;;;;
 PROV1045;Migulinskaya;;;;;;;;;;;;;
