--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -8860,7 +8860,6 @@ PROV301;Canterbury;Canterbury;Canterbury;;Canterbury;;;;;;;;
 PROV302;Brighton;Brighton;Brighton;;Brighton;;;;;;;;
 PROV303;Southampton;Southampton;Southampton;;Southampton;;;;;;;;
 PROV304;Isle of Man;Île de Man;Isle of Man;;Isla de Man;;;;;;;;
-PROV307;Hammerfest;Hammerfest;Hammerfest;;Hammerfest;;;;;;;;
 PROV309;Bergen;Bergen;Bergen;;Bergen;;;;;;;;
 PROV310;Stavanger;Stavanger;Stavanger;;Stavanger;;;;;;;;
 PROV311;Skien;Skien;Skien;;Skien;;;;;;;;
@@ -8870,10 +8869,6 @@ PROV314;Hamar;Hamar;Hamar;;Hamar;;;;;;;;
 PROV315;Lillehammer;Lillehammer;Lillehammer;;Lillehammer;;;;;;;;
 PROV316;Frederiksstad;Frederiksstad;Frederiksstad;;Frederiksstad;;;;;;;;
 PROV317;Gävle;Gävle;Gävle;;Gävle;;;;;;;;
-PROV318;Sundsvall;Sundsvall;Sundsvall;;Sundsvall;;;;;;;;
-PROV319;Östersund;Östersund;Östersund;;Östersund;;;;;;;;
-PROV320;Umea;;;;;;;;;;;;
-PROV321;Lulea;;;;;;;;;;;;
 PROV322;Stockholm;Stockholm;Stockholm;;Estocolmo;;;;;;;;
 PROV323;Falun;Falun;Falun;;Falun;;;;;;;;
 PROV324;Uppsala;Uppsala;Uppsala;;Uppsala;;;;;;;;
@@ -8892,19 +8887,11 @@ PROV336;Oulu;Oulu;Oulu;;Oulu;;;;;;;;
 PROV337;Kajaani;Kajaani;Kajaani;;Kajaani;;;;;;;;
 PROV338;Tornio;Tornio;Tornio;;Tornio;;;;;;;;
 PROV339;Viipuri;Viipuri;Viipuri;;Viipuri;;;;;;;;
-PROV340;Kotka;Kotka;Kotka;;Kotka;;;;;;;;
 PROV341;Mikkeli;Mikkeli;Mikkeli;;Mikkeli;;;;;;;;
 PROV342;Kuopio;Kuopio;Kuopio;;Kuopio;;;;;;;;
 PROV343;Helsinki;Helsinki;Helsinki;;Helsinki;;;;;;;;
 PROV344;Hämeenlinna;Hämeenlinna;Hameenlinna;;Hameenlinna;;;;;;;;
-PROV345;Turku;Turku;Turku;;Turku;;;;;;;;
-PROV346;Vaasa;Vaasa;Vaasa;;Vaasa;;;;;;;;
 PROV347;Tampere;Tampere;Tampere;;Tampere;;;;;;;;
-PROV348;Åland Islands;Îles Åland;Aland-Inseln;;Islas Aland;;;;;;;;
-PROV349;Reval;Reval;Reval;;Reval;;;;;;;;
-PROV352;Dorpat;Dorpat;Dorpat;;Dorpat;;;;;;;;
-REMOVE_PROV353;Kuressaare;Kuressaare;Kuressaare;;Kuressaare;;;;;;;;
-PROV354;Riga;Riga;Riga;;Riga;;;;;;;;
 PROV369;Kiel;Kiel;Kiel;;Kiel;;;;;;;;
 PROV370;Flensburg;Flensburg;Flensburg;;Flensburg;;;;;;;;
 PROV373;Odense;Odense;Odense;;Odense;;;;;;;;
@@ -9372,8 +9359,6 @@ PROV970;Nikolaev;Nikolaev;Nikolaev;;Nikolaev;;;;;;;;
 PROV973;Kyzyl-Yar;Kyzyl-Yar;Kyzyl-Yar;;Kyzyl-Yar;;;;;;;;
 PROV977;Kursk;Koursk;Kursk;;Kursk;;;;;;;;
 PROV979;Rostov;Rostov;Rostov;;Rostov;;;;;;;;
-PROV982;Petsamo;Petsamo;Petsamo;;Petsamo;;;;;;;;
-PROV983;Kandalaksha;Kandalaksha;Kandalaksha;;Kandalaksha;;;;;;;;
 PROV985;Mezen;Mezen;Mezen;;Mezen;;;;;;;;
 PROV986;Naryn Mar;Naryan Mar;Naryn Mar;;Naryn Mar;;;;;;;;
 PROV987;Ust Sysolsk;Ust Sysolsk;Ust Sysolsk;;Ust Sysolsk;;;;;;;;
@@ -9381,9 +9366,6 @@ PROV989;Vologda;Vologda;Vologda;;Vologda;;;;;;;;
 PROV990;Kotlas;Kotlas;Kotlas;;Kotlas;;;;;;;;
 PROV991;Uglich;Ouglitch;Uglich;;Uglich;;;;;;;;
 PROV992;Belozersk;Belozersk;Belozersk;;Belozërsk;;;;;;;;
-PROV994;St Petersburg;Saint-Pétersbourg;St Petersburg;;San Petersburgo;;;;;;;;
-PROV996;Luga;Luga;Luga;;Luga;;;;;;;;
-PROV997;Gdov;Gdov;Gdov;;Gdov;;;;;;;;
 PROV998;Tver;Tver;Tver;;Tver;;;;;;;;
 PROV999;Rzhev;Rzhev;Rzhev;;Rzhev;;;;;;;;
 PROV1000;Staritsa;Staritsa;Staritsa;;Staritsa;;;;;;;;
@@ -10642,7 +10624,6 @@ PROV2576;Natuna;Natuna;Natuna;;Natuna;;;;;;;;
 PROV2578;Tacna;Tacna;Tacna;;Tacna;;;;;;;;
 PROV2579;Chuuk;;;;;;;;;;;;
 PROV2583;Cetinje;Cetinje;Cetinje;;Cetinje;;;;;;;;
-PROV2587;Kola;Kola;Kola;;Kola;;;;;;;;
 PROV2588;Onega;Onega;Onega;;Onega;;;;;;;;
 PROV2592;Ungava;Ungava;Ungava;;Ungava;;;;;;;;
 PROV2593;Fort George;Fort George;Fort George;;Fort George;;;;;;;;
@@ -10689,10 +10670,9 @@ PROV2700;Usogorsk;Usogorsk;Usogorsk;;Usogorsk;;;;;;;;
 PROV2703;Vänern;Vänern;Vänern;;Vänern;;;;;;;;
 PROV2704;Vättern;Vättern;Vättern;;Vättern;;;;;;;;
 PROV2705;Gulf of Bothnia;Golfe de Bothnia;Bothnischer Meerbusen;;Golfo de Botnia;;;;;;;;
-PROV2706;Ålands Hav;Mer d'Åland;Ålands Hav;;Mar de Åland;;;;;;;;
+PROV2706;Ahvenanmaa Meri;;;;;;;;;;;;
 PROV2707;Gulf of Finland;Golfe de Finlande;Finnischer Meerbusen;;Golfo de Finlandia;;;;;;;;
 PROV2708;Western Baltic Sea;Mer Baltique occidentale;Westliche Ostsee;;Mar Báltico Occidental;;;;;;;;
-PROV2709;Gulf of Riga;Golfe de Riga;Golf von Riga;;Golfo de Riga;;;;;;;;
 PROV2710;Southern Baltic Sea;Mer Baltique méridionale;Südliche Ostsee;;Mar Báltico Meridional;;;;;;;;
 PROV2713;Peipsi Järv;Peipsi Järv;Peipsi Järv;;Peipsi Järv;;;;;;;;
 PROV2714;Ladoga;Ladoga;Ladoga;;Lago Ladoga;;;;;;;;
