--- a/KOS/localisation/PDM_CE.csv
+++ b/KOS/localisation/PDM_CE.csv
@@ -108,10 +108,7 @@ RUS_956;Volhynia;;;;;;;;;;;;;
 RUS_980;Donbass;;;;;;;;;;;;;
 ENG_1320;Andaman & Nicobar Islands;;;;;;;;;;;;;
 PROV251;Godthab;;;;;;;;;;;;;
-PROV350;Narwa;;;;;;;;;;;;;
-PROV351;Pernau;;;;;;;;;;;;;
-PROV355;Wolmar;;;;;;;;;;;;;
-PROV356;Jakobstadt;;;;;;;;;;;;;
+PROV350;Narva;;;;;;;;;;;;;
 PROV357;Mitau;;;;;;;;;;;;;
 PROV358;Goldingen;;;;;;;;;;;;;
 PROV359;Libau;;;;;;;;;;;;;
@@ -164,8 +161,6 @@ PROV792;Pancsova;;;;;;;;;;;;;
 PROV951;Folyóvár;;;;;;;;;;;;;
 PROV953;Varjakvár;;;;;;;;;;;;;
 PROV980;Lugansk;;;;;;;;;;;;;
-PROV984;Kem;;;;;;;;;;;;;
-PROV988;Pudozh;;;;;;;;;;;;;
 PROV993;Vytegra;;;;;;;;;;;;;
 PROV1023;Kostroma;;;;;;;;;;;;;
 PROV1038;Novy Uzen;;;;;;;;;;;;;
