loc seto veps livonia preitsomaa

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -27,11 +27,9 @@ PROV3442;Darvaza;;;;;;;;;;;;;
 PROV858;Tlaxcallan;;;;;;;;;;;;;
 PROV3425;Altenburg;;;;;;;;;;;;;
 PROV3424;Saletsa;;;;;;;;;;;;;
-PROV3423;Domesnes;;;;;;;;;;;;;
 PROV3422;Baia Mare;;;;;;;;;;;;;
 PROV3421;Presevo;;;;;;;;;;;;;
 PROV3420;Peja;;;;;;;;;;;;;
-PROV3419;Toropets;;;;;;;;;;;;;
 PROV3418;Crossen;;;;;;;;;;;;;
 PROV3417;Weststernberg;;;;;;;;;;;;;
 PROV3416;Bautzen;;;;;;;;;;;;;
@@ -86,7 +84,6 @@ PROV3370;Fenyovár;;;;;;;;;;;;;
 PROV3369;Firjuza;;;;;;;;;;;;;
 PROV3368;Jaanilidna;;;;;;;;;;;;;
 PROV3367;Petseri;;;;;;;;;;;;;
-PROV3366;Telsiai;;;;;;;;;;;;;
 PROV3365;Neustadt;;;;;;;;;;;;;
 PROV3364;Sanmenwai;;;;;;;;;;;;;
 PROV3363;Konin;;;;;;;;;;;;;
@@ -123,10 +120,6 @@ PROV3333;Pribram;;;;;;;;;;;;;
 PROV3332;Berehowe;;;;;;;;;;;;;
 PROV3331;Kikinda;;;;;;;;;;;;;
 PROV3330;Subotica;;;;;;;;;;;;;
-PROV3329;Lotzen;;;;;;;;;;;;;
-PROV3328;Osterode;;;;;;;;;;;;;
-PROV3327;Ortelsburg;;;;;;;;;;;;;
-PROV3326;Neumark;;;;;;;;;;;;;
 PROV3325;Tiraspol;;;;;;;;;;;;;
 PROV3324;Ositemphely;;;;;;;;;;;;;
 PROV3323;Kefelong;;;;;;;;;;;;;
@@ -470,15 +463,52 @@ PROV353;Kuressaare;;;;;;;;;;;;;
 PROV354;Rigõ;;;;;;;;;;;;
 PROV355;Lemsalu;;;;;;;;;;;;;
 PROV356;Olysta;;;;;;;;;;;;;
+PROV357;Jalgab;;;;;;;;;;;;;
+PROV358;Kuldiga;;;;;;;;;;;;;
+PROV359;Liepõ;;;;;;;;;;;;;
+PROV360;Vilnõ;;;;;;;;;;;;;
+PROV361;Kõns;;;;;;;;;;;;;
+PROV362;Marianelinn;;;;;;;;;;;;;
+PROV363;Paneveži;;;;;;;;;;;;;
+PROV364;Sõle;;;;;;;;;;;;;
+PROV365;Palõga;;;;;;;;;;;;;
+PROV693;Turnstadt;;;;;;;;;;;;
+PROV694;Tõrünn;;;;;;;;;;;;;
+PROV695;Küningmegi;;;;;;;;;;;;
+PROV696;Elnalinn;;;;;;;;;;;;
+PROV697;Kõrvetsen;;;;;;;;;;;;
+PROV698;Klaped;;;;;;;;;;;;
+PROV707;Rebalädel;;;;;;;;;;;;
+PROV708;Plukkõnen;;;;;;;;;;;;
+PROV945;Vitsabask;;;;;;;;;;;;
 PROV982;Aanaar;;;;;;;;;;;;
 PROV983;Käddluhtt;;;;;;;;;;;;
 PROV984;Kemi;;;;;;;;;;;;;
 PROV988;Puudoži;;;;;;;;;;;;;
+PROV992;Cerepovec;;;;;;;;;;;;
 PROV994;Nevanlinna;;;;;;;;;;;;
 PROV996;Laugaz;;;;;;;;;;;;
 PROV997;Vopskiliin;;;;;;;;;;;;
+PROV998;Tiheverä;;;;;;;;;;;;
+PROV999;Ržev;;;;;;;;;;;;
+PROV1000;Staric;;;;;;;;;;;;
+PROV1003;Sur' Uz'lidn;;;;;;;;;;;;
+PROV1004;Tihvin;;;;;;;;;;;;
+PROV1005;Borovici;;;;;;;;;;;;
+PROV1006;Saarõliin;;;;;;;;;;;;
+PROV1007;Lovatijõgiliin;;;;;;;;;;;;
 PROV2587;Kuâlõk;;;;;;;;;;;;
 PROV2709;Gulf of Rigõ;;;;;;;;;;;;
+PROV2714;Nevajärvi;;;;;;;;;;;;
+PROV3326;Butsiek;;;;;;;;;;;;;
+PROV3327;Gelints;;;;;;;;;;;;;
+PROV3328;Eustratii;;;;;;;;;;;;;
+PROV3329;Lütsen;;;;;;;;;;;;;
+PROV3366;Telshõ;;;;;;;;;;;;;
+PROV3419;Toropec;;;;;;;;;;;;;
+PROV3423;Kuolka;;;;;;;;;;;;;
+PRU_695;Ostpreu?n;Ostpreu?n;Ostpreu?n;;Ostpreu?n;;;;;;;;
+RUS_1003;Sur' Uz'lidn;;;;;;;;;;;;
 PROV1377;Da Nang;;;;;;;;;;;;;
 PROV1714;Santa Rosa;;;;;;;;;;;;;
 PROV2631;Unalakleet;;;;;;;;;;;;;
@@ -544,7 +574,7 @@ PROV2220;Turks & Caicos;;;;;;;;;;;;;
 CHI_1082;Guanwai;;;;;;;;;;;;;
 PROV2591;Tranquebar;;;;;;;;;;;;;
 PROV2625;North West River;;;;;;;;;;;;;
-PROV2580;Novaya Ladoga;;;;;;;;;;;;;
+PROV2580;Uz' Ladog;;;;;;;;;;;;;
 PROV995;Äänislinna;;;;;;;;;;;;;
 PROV965;Jarson;;;;;;;;;;;;;
 PROV1048;Yekaterinodar;;;;;;;;;;;;;
