--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -67,7 +67,6 @@ PROV3387;Urkarakh;;;;;;;;;;;;;
 PROV3386;Haykategh;;;;;;;;;;;;;
 PROV3385;Quba;;;;;;;;;;;;;
 PROV3384;Kurakh;;;;;;;;;;;;;
-PROV3383;Turnhout;;;;;;;;;;;;;
 PROV3382;Vista Alegre;;;;;;;;;;;;;
 PROV3381;Boca do Acre;;;;;;;;;;;;;
 PROV3380;Corumba;;;;;;;;;;;;;
@@ -105,8 +104,7 @@ PROV3348;Artaz;;;;;;;;;;;;;
 PROV3347;Jagodina;;;;;;;;;;;;;
 PROV3346;Krusevac;;;;;;;;;;;;;
 PROV3345;Sis;;;;;;;;;;;;;
-PROV3344;Terneuzen;;;;;;;;;;;;;
-PROV3343;Leuven;;;;;;;;;;;;;
+PROV3344;Terneuzn;;;;;;;;;;;;;
 PROV3342;Kilkis;;;;;;;;;;;;;
 PROV3341;Augustow;;;;;;;;;;;;;
 PROV3340;Krepost Ross;;;;;;;;;;;;;
@@ -230,9 +228,9 @@ BEL_387;Vlaanderen;;;;;;;;;;;;;
 BEL_394;Wallonie;;;;;;;;;;;;;
 PROV609;Sion;;;;;;;;;;;;;
 PROV1623;Songjin;;;;;;;;;;;;;
-PROV388;Brugge;;;;;;;;;;;;;
-PROV389;Gent;;;;;;;;;;;;;
-PROV390;Antwerpen;;;;;;;;;;;;;
+PROV388;Bruges;;;;;;;;;;;;;
+PROV389;Gand;;;;;;;;;;;;;
+PROV390;Antwerpn;;;;;;;;;;;;;
 PROV3269;Portsmouth;;;;;;;;;;;;;
 PROV3268;Exeter;;;;;;;;;;;;;
 PROV3267;Bielefield;;;;;;;;;;;;;
@@ -365,7 +363,7 @@ PROV2036;Mzizima;;;;;;;;;;;;;
 PROV2681;Taipei;;;;;;;;;;;;;
 PROV1485;Tainan;;;;;;;;;;;;;
 PROV2562;Taitung;;;;;;;;;;;;;
-PROV1743;Nordhorn;;;;;;;;;;;;;
+PROV1743;Nothoorn;;;;;;;;;;;;;
 PROV1738;al-Jaghbub;;;;;;;;;;;;;
 PROV2585;al-Jawf;;;;;;;;;;;;;
 PROV1742;Wath;;;;;;;;;;;;;
@@ -472,8 +470,29 @@ PROV362;Marianelinn;;;;;;;;;;;;;
 PROV363;Paneveži;;;;;;;;;;;;;
 PROV364;Sõle;;;;;;;;;;;;;
 PROV365;Palõga;;;;;;;;;;;;;
+PROV375;Aakustêll;;;;;;;;;;;;
+PROV376;Rottedaam;;;;;;;;;;;;
+PROV377;Doarestêd;;;;;;;;;;;;
+PROV378;Middelburch;;;;;;;;;;;;
+PROV379;Einpletse;;;;;;;;;;;;
+PROV380;Breedaa;;;;;;;;;;;;
+PROV381;Limburch;;;;;;;;;;;;;
+PROV382;Arnhim;;;;;;;;;;;;
+PROV383;Grins;;;;;;;;;;;;
+PROV384;Swol;;;;;;;;;;;;
+PROV385;Ljouwert;;;;;;;;;;;;
+PROV386;Drinte;;;;;;;;;;;;
+PROV387;Brussels;;;;;;;;;;;;;
+PROV393;Mont;;;;;;;;;;;;;
+PROV391;Hasselt;;;;;;;;;;;;
+PROV392;Nameur;;;;;;;;;;;;
+PROV394;Tchålerwè;;;;;;;;;;;;
+PROV395;Lîdje;;;;;;;;;;;;
+PROV396;Redîmés Payis;;;;;;;;;;;;;
+PROV533;Lun;;;;;;;;;;;;
+PROV543;Oamde;;;;;;;;;;;;
 PROV693;Turnstadt;;;;;;;;;;;;
-PROV694;Tõrünn;;;;;;;;;;;;;
+PROV694;Grõdetsen;;;;;;;;;;;;;
 PROV695;Küningmegi;;;;;;;;;;;;
 PROV696;Elnalinn;;;;;;;;;;;;
 PROV697;Kõrvetsen;;;;;;;;;;;;
@@ -505,9 +524,16 @@ PROV3327;Gelints;;;;;;;;;;;;;
 PROV3328;Eustratii;;;;;;;;;;;;;
 PROV3329;Lütsen;;;;;;;;;;;;;
 PROV3366;Telshõ;;;;;;;;;;;;;
+PROV3383;Turnhout;;;;;;;;;;;;;
 PROV3419;Toropec;;;;;;;;;;;;;
 PROV3423;Kuolka;;;;;;;;;;;;;
-PRU_695;Ostpreu?n;Ostpreu?n;Ostpreu?n;;Ostpreu?n;;;;;;;;
+PROV3343;Louvain;;;;;;;;;;;;;
+NET_375;Hollân;;;;;;;;;;;;
+NET_379;Seelân;;;;;;;;;;;;;
+NET_381;Gelderland;;;;;;;;;;;;
+NET_385;Fryslân;;;;;;;;;;;;
+HAN_540;West-Fryslân;;;;;;;;;;;;;
+PRU_695;Ostpreu?n;;;;;;;;;;;;
 RUS_1003;Sur' Uz'lidn;;;;;;;;;;;;
 PROV1377;Da Nang;;;;;;;;;;;;;
 PROV1714;Santa Rosa;;;;;;;;;;;;;
@@ -659,7 +685,6 @@ BRZ_2428;Nordeste;;;;;;;;;;;;;
 PROV2423;Vila da Palma;;;;;;;;;;;;;
 PROV2426;Vila do Poti;;;;;;;;;;;;;
 NEJ_1156;Ha'il;;;;;;;;;;;;;
-PROV396;Eupen-Malmedy;;;;;;;;;;;;;
 KOR_1624;Hanseong;;;;;;;;;;;;;
 PROV3101;Lake Chad;;;;;;;;;;;;;
 PROV3102;Ukerewe;;;;;;;;;;;;;
@@ -722,8 +747,6 @@ RUS_345;Varsinais-Suomi;;;;;;;;;;;;;
 RUS_360;Lithuania;;;;;;;;;;;;;
 HOL_369;Holstein;;;;;;;;;;;;;
 SCH_370;Schleswig;;;;;;;;;;;;;
-NET_379;Zeeland;;;;;;;;;;;;;
-PROV381;Limburg;;;;;;;;;;;;;
 HAN_534;Hannover;;;;;;;;;;;;;
 PRU_544;Mecklenburg;;;;;;;;;;;;;
 PRU_575;Rheinland;;;;;;;;;;;;;
@@ -992,7 +1015,6 @@ PROV3126;Coast of Minami;;;;;;;;;;;;;
 CAN_13;Columbia;;;;;;;;;;;;;
 PROV19;Valemount;;;;;;;;;;;;;
 HAN_528;Niederelbe;;;;;;;;;;;;;
-HAN_540;Ost-Friesland;;;;;;;;;;;;;
 PRU_553;Anhalt;;;;;;;;;;;;;
 PRU_554;Thüringen;;;;;;;;;;;;;
 SAX_558;Sachsen;;;;;;;;;;;;;
@@ -1054,7 +1076,7 @@ PROV60;Richmond;;;;;;;;;;;;;
 PROV211;Lynchburg;;;;;;;;;;;;;
 PROV2186;Chiya;;;;;;;;;;;;;
 PROV14;Victoria;;;;;;;;;;;;;
-PROV3259;Jadegebiet;;;;;;;;;;;;;
+PROV3259;Sibetsboarch;;;;;;;;;;;;;
 east_africa;East Africa;;;;;;;;;;;;;
 west_africa;West Africa;;;;;;;;;;;;;
 south_west_africa;South-West Africa;;;;;;;;;;;;;
@@ -1066,7 +1088,7 @@ PROV595;Nürnberg;;;;;;;;;;;;;
 PROV575;Köln;;;;;;;;;;;;;
 PROV577;Kleve;;;;;;;;;;;;;
 PROV536;Braunschweig;;;;;;;;;;;;;
-PROV400;Dunkerque;;;;;;;;;;;;;
+PROV400;Dunkèke;;;;;;;;;;;;;
 PROV451;Lyon;;;;;;;;;;;;;
 PROV534;Hannover;;;;;;;;;;;;;
 FRA_438;Centre-Val de Loire;;;;;;;;;;;;;
