--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -8820,7 +8820,7 @@ PROV261;Cill Rois;Cill Rois;Cill Rois;;Cill Rois;;;;;;;;
 PROV262;Vedrafjordr;Vedrafjordr;Vedrafjordr;;Vedrafjordr;;;;;;;;
 PROV263;Duibhlinn;Duibhlinn;Duibhlinn;;Duibhlinn;;;;;;;;
 PROV264;Cilldara;Cilldara;Cilldara;;Cilldara;;;;;;;;
-PROV265;Veisafjordr;Veisafjordr;Veisafjordr;;Veisafjordr;;;;;;;;
+PROV265;Sacidava;Sacidava;Sacidava;;Sacidava;;;;;;;;
 PROV266;Aberdeen;Aberdeen;Aberdeen;;Aberdeen;;;;;;;;
 PROV267;Inverness;Inverness;Inverness;;Inverness;;;;;;;;
 PROV268;Dundee;Dundee;Dundee;;Dundee;;;;;;;;
