--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -1195,7 +1195,7 @@ PROV3616;Neidin;;;;;;;;;;;;;
 PROV3617;Orglan;;;;;;;;;;;;;
 PROV3618;Airne;;;;;;;;;;;;;
 PROV3619;Corcaigh;;;;;;;;;;;;;
-PROV3620;Chloichin;;;;;;;;;;;;;
+PROV3620;Iasikavan;;;;;;;;;;;;;
 PROV3621;Ramidava;;;;;;;;;;;;;
 PROV3622;Chainnigh;;;;;;;;;;;;;
 PROV3623;Nentidava;;;;;;;;;;;;;
@@ -1203,12 +1203,12 @@ PROV3624;Buridava;;;;;;;;;;;;;
 PROV3625;Daingean;;;;;;;;;;;;;
 PROV3626;Traigh Li;;;;;;;;;;;;;
 PROV3627;Caislean Nua;;;;;;;;;;;;;
-PROV3628;Ath Dara;;;;;;;;;;;;;
+PROV3628;Kisfalucska;;;;;;;;;;;;;
 PROV3629;Luimneach;;;;;;;;;;;;;
 PROV3630;Otideva;;;;;;;;;;;;;
 PROV3631;Inis;;;;;;;;;;;;;
 PROV3632;Taonach;;;;;;;;;;;;;
-PROV3633;Durlas;;;;;;;;;;;;;
+PROV3633;Petredeva;;;;;;;;;;;;;
 PROV3634;Ros Cre;;;;;;;;;;;;;
 PROV3635;Karabava;;;;;;;;;;;;;
 PROV3636;Scaedava;;;;;;;;;;;;;
