--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -306,6 +306,20 @@ BSL;Basel-Monbéliard;x;;;;
 BSL_ADJ;Bâleur;x;;;;
 SPE;Speyer;x;;;;
 SPE_ADJ;Spireur;x;;;;
+WAC;Wacyruxs;x;;;;
+WAC_ADJ;Wacyruxs;x;;;;
+GET;Getae;x;;;;
+GET_ADJ;Getae;x;;;;
+CRP;Carpiani;x;;;;
+CRP_ADJ;Carpianix;x;;;;
+CSB;Costoboci;x;;;;
+CSB_ADJ;Costoboci;x;;;;
+BST;Bastarnae;x;;;;
+BST_ADJ;Bastarnae;x;;;;
+DCM;Dacia Minor;x;;;;
+DCM_ADJ;Dacian;x;;;;
+BEC;Becenegi;x;;;;
+BEC_ADJ;Becenegi;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
@@ -673,6 +687,13 @@ chorasmian;Chorasmian;x;;;;
 latogatorok;Látogatórok;x;;;;
 batorok;Bátorok;x;;;;
 kushite;Kushite;x;;;;
+wacyruxs;Wacyruxs;x;;;;
+getae;Getae;x;;;;
+daci;Daci;x;;;;
+carpi;Carpi;x;;;;
+costoboci;Costoboci;x;;;;
+bastarnae;Bastarnae;x;;;;
+beceneg;Beceneg;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
