--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -181,14 +181,14 @@ PROV940;Brest-Litovsk;;;;;;;;;;;;;
 PROV937;Pruzhany;;;;;;;;;;;;;
 PROV939;Pinsk;;;;;;;;;;;;;
 PROV509;Sevilla;;;;;;;;;;;;;
-PROV677;Akerman;;;;;;;;;;;;;
+PROV677;Kabuksenula;;;;;;;;;;;;;
 PROV834;Athina;;;;;;;;;;;;;
 PROV3293;Smpadapert;;;;;;;;;;;;;
 PROV3294;Verinkghzin;;;;;;;;;;;;;
 PROV1119;Kermanshah;;;;;;;;;;;;;
 PROV1117;Sanandaj;;;;;;;;;;;;;
 PROV1118;Saqqez;;;;;;;;;;;;;
-PROV673;Cahul;;;;;;;;;;;;;
+PROV673;Seliava;;;;;;;;;;;;;
 PROV3286;Steinamanger;;;;;;;;;;;;;
 PROV2638;Zabul;;;;;;;;;;;;;
 PROV2643;Hajjiabad;;;;;;;;;;;;;
@@ -1137,8 +1137,8 @@ PROV3558;Weinschloss;;;;;;;;;;;;;
 PROV3559;Einheimische;;;;;;;;;;;;;
 PROV3560;Kaputtschwert;;;;;;;;;;;;;
 PROV3561;Avignon;;;;;;;;;;;;;
-PROV3562;Hotin;;;;;;;;;;;;;
-PROV3563;Balti;;;;;;;;;;;;;
+PROV3562;Otena;;;;;;;;;;;;;
+PROV3563;Balteva;;;;;;;;;;;;;
 PROV3564;Jaszbereny;;;;;;;;;;;;;
 PROV3565;Jaszapati;;;;;;;;;;;;;
 PROV3566;Jaszvar;;;;;;;;;;;;;
@@ -1234,7 +1234,7 @@ PROV3655;Buteridava;;;;;;;;;;;;;
 PROV3656;Mhala Raithni;;;;;;;;;;;;;
 PROV3657;Maigh Eo;;;;;;;;;;;;;
 PROV3658;Buille;;;;;;;;;;;;;
-PROV3659;Merideva;;;;;;;;;;;;;
+PROV3659;Iavaderva;;;;;;;;;;;;;
 PROV3660;Inis Crabhann;;;;;;;;;;;;;
 PROV3661;Zveibrücken;;;;;;;;;;;;;
 PROV3662;Cealla Beaga;;;;;;;;;;;;;
