--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -9100,17 +9100,17 @@ PROV653;Resicabánya;Resicabánya;Resicabánya;;Resicabánya;;;;;;;;
 PROV658;Hawaii;Hawaii;Hawaii;;Hawai;;;;;;;;
 PROV662;Cernauti;Cernauti;Cernauti;;Cernauti;;;;;;;;
 PROV663;Suceava;Suceava;Suceava;;Suceava;;;;;;;;
-PROV664;Bucharest;Bucarest ;Bukarest;;Bucarest;;;;;;;;
+PROV664;Bukuria;Bukuria;Bukuria;;Bukuria;;;;;;;;
 PROV665;Tirgu Jiu;Târgu Jiu;Tirgu Jiu;;Tirgu Jiu;;;;;;;;
 PROV666;Craiova;Craiova;Craiova;;Craiova;;;;;;;;
-PROV667;Tirgoviste;Târgoviste;Tirgoviste;;Tirgoviste;;;;;;;;
-PROV668;Braila;Braila;Braila;;Braila;;;;;;;;
-PROV669;Calarasi;Calarasi;Calarasi;;Calarasi;;;;;;;;
-PROV670;Iasi;Iasi;Iasi;;Iasi;;;;;;;;
-PROV671;Botosani;Botosani;Botosani;;Botosani;;;;;;;;
-PROV672;Bacau;Bacau;Bacau;;Bacau;;;;;;;;
-PROV676;Chisinau;Chisinau;Chisinau;;Chisinau;;;;;;;;
-PROV678;Izmail;Izmail;Izmail;;Izmail;;;;;;;;
+PROV667;Targovica;Targovica;Targovica;;Targovica;;;;;;;;
+PROV668;Braleva;Braleva;Braleva;;Braleva;;;;;;;;
+PROV669;Liceresta;Liceresta;Liceresta;;Liceresta;;;;;;;;
+PROV670;Iasitarga;Iasitarga;Iasitarga;;Iasitarga;;;;;;;;
+PROV671;Delavani;Delavani;Delavani;;Delavani;;;;;;;;
+PROV672;Bakova;Bakova;Bakova;;Bakova;;;;;;;;
+PROV676;Kisenova;Kisenova;Kisenova;;Kisenova;;;;;;;;
+PROV678;Lukovisji;Lukovisji;Lukovisji;;Lukovisji;;;;;;;;
 PROV679;Kolberg;Kolberg;Kolberg;;Kolberg;;;;;;;;
 PROV680;Köslin;Koszalin;Koslin;;Koslin;;;;;;;;
 PROV681;Küstrin;Küstrin;Küstrin;;Kustrin;;;;;;;;
